--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,10 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Docker Login
+          command: |
+            echo "{\"auths\": {\"https://index.docker.io/v1/\": {\"auth\": \"$DOCKER_AUTH_TOKEN\"}}}" > /root/.docker/config.json
+      - run:
           name: Build docker image with kaniko
           command: |
             /kaniko/executor --dockerfile=Dockerfile \
